--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <pre><center>
-<title>khanhduytran0's repo</title>
-<h1>khanhduytran0's repo</h1>
-<li>Add to <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://khanhduytran0.github.io/repo">Cydia</a></li>
-<li>Add to <a class="btn btn-sm btn-default" href="installer://add/https://khanhduytran0.github.io/repo">Installer</a></li>
-<li>Add to <a class="btn btn-sm btn-default" href="sileo://source/https://khanhduytran0.github.io/repo">Sileo</a></li>
-<li>Add to <a class="btn btn-sm btn-default" href="zbra://sources/add/https://khanhduytran0.github.io/repo">Zebra</a></li>
+<title>nizira1n's repo</title>
+<h1>nizira1n's repo</h1>
+<li>Add to <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://nizira1n.github.io/repo">Cydia</a></li>
+<li>Add to <a class="btn btn-sm btn-default" href="installer://add/https://nizira1n.github.io/repo">Installer</a></li>
+<li>Add to <a class="btn btn-sm btn-default" href="sileo://source/https://nizira1n.github.io/repo">Sileo</a></li>
+<li>Add to <a class="btn btn-sm btn-default" href="zbra://sources/add/https://nizira1n.github.io/repo">Zebra</a></li>
 thanks for using <a class="btn btn-sm btn-default" href="https://github.com/uchks/repo.me">repo.me</a> by uchks!
 </center></pre>
